add readme images

--- a/기획/와이어프레임/220719_지은.md
+++ b/기획/와이어프레임/220719_지은.md
@@ -8,24 +8,24 @@
 
 * 업주 입장에서 바라보는 마이페이지
 
-  ![image-20220719172055299](C:\Users\SSAFY\AppData\Roaming\Typora\typora-user-images\image-20220719172055299.png)
+  ![image-20220719172055299](./220719_지은.assets/업주_마이페이지.png)
 
 
 
 * 사용자(고객) 입장에서 바라보는 마이페이지
 
-  ![image-20220719171919069](C:\Users\SSAFY\AppData\Roaming\Typora\typora-user-images\image-20220719171919069.png)
+  ![image-20220719171919069](./220719_지은.assets/사용자_마이페이지.png)
 
 
 
 * 관리자 페이지로 바라보는 마이페이지
 
-  ![image-20220719171946656](C:\Users\SSAFY\AppData\Roaming\Typora\typora-user-images\image-20220719171946656.png)
+  ![image-20220719171946656](./220719_지은.assets/관리자_마이페이지.png)
 
 
 
 ## 로고 그리고 정하기
 
-![image-20220719172120448](C:\Users\SSAFY\AppData\Roaming\Typora\typora-user-images\image-20220719172120448.png)
+![image-20220719172120448](./220719_지은.assets/로고캡쳐.png)
 
 => 결론: 4번!
