--- a/Daily/동근/220719_동근.md
+++ b/Daily/동근/220719_동근.md
@@ -1,8 +1,12 @@
 # 오늘 한 일
 
-220719 화요일
+일시: 22.07.19 Tues
 
+프로젝트명: 온식고(OnSikGo)
 
+현재 진행상태: 기획 마무리
+
+팀멤버: 장창완, 공지훈, 김가흔, 손효재, **이동근**, 최지은
 
 ## 와이어프레임
 
